WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50991
JavaScriptCore should not use "asm volatile" outside of a function
https://bugs.webkit.org/show_bug.cgi?id=50991
Summary
JavaScriptCore should not use "asm volatile" outside of a function
Cameron Zwarich (cpst)
Reported
2010-12-13 15:51:02 PST
JavaScriptCore should not use "asm volatile" outside of a function. The 'volatile' does nothing.
Attachments
Proposed patch
(2.44 KB, patch)
2010-12-13 15:56 PST
,
Cameron Zwarich (cpst)
barraclough
: review+
zwarich
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2010-12-13 15:56:59 PST
Created
attachment 76461
[details]
Proposed patch
Eric Seidel (no email)
Comment 2
2010-12-20 22:46:46 PST
r73981
. Please use webkit-patch land to land your changes so that bugs get closed. :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug