Reviewed by Gavin Barraclough.

JavaScriptCore should not use "asm volatile" outside of a function
https://bugs.webkit.org/show_bug.cgi?id=50991

* jit/JITStubs.cpp: Remove the volatile keyword from asm statements.


git-svn-id: svn://svn.chromium.org/blink/trunk@73981 bbb929c8-8fbe-4397-9dbb-9b2b20218538